Fix spacing between rating tags when section has multiple instructors

--- a/css/global.css
+++ b/css/global.css
@@ -15,4 +15,7 @@
     display: inline-flex;
     flex-wrap: wrap;
     align-items: center;
+
+    max-width: 200px;
+    row-gap: 0.5em;
 }
